syntax = "proto3";
package broker.dealer.v1;
option go_package = "github.com/textileio/broker-core/broker/dealer/v1;dealer";

import "google/protobuf/timestamp.proto";

message ReadyToCreateDealsRequest {
  string storage_deal_id = 1;
  string payload_cid = 2;
  string piece_cid = 3;
  uint64 piece_size = 4;
  uint64 duration = 5;
  repeated AuctionDealsTarget targets = 6;

  message AuctionDealsTarget {
    string miner = 1;
    int64 price_per_gib_per_epoch = 2;
    uint64 start_epoch = 3;
    bool verified = 4;
    bool fast_retrieval = 5;
  }
}

message ReadyToCreateDealsResponse {
}

service APIService {
    rpc ReadyToCreateDeals(ReadyToCreateDealsRequest) returns (ReadyToCreateDealsResponse) {}
}
